# benchmarking_planners

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  robowflex_library  robowflex_ompl
benchmarking_planners/: package.xml
benchmarking_utils/: CMakeLists.txt  package.xml
benchmarking_utils/apptainer/: benchmarking.def
benchmarking_utils/bash_scripts/: benchmark_smpl.sh  build-apptainer.sh  build-docker.sh  build-ws.sh  post-build.sh  pre-build.sh
benchmarking_utils/docker/: Dockerfile  Dockerfile_old  build-docker.sh
benchmarking_utils/scripts/: sbpl2urdf
benchmarking_utils/scripts/visualize/: benchmark_plots.ipynb  benchmarking_pyre  benchmarking_smpl
benchmarking_utils/scripts/visualize/benchmarking_pyre_ORIGINAL/: README.md  shelf_height_results.db  shelf_height_rot_results.db  shelf_zero_results.db
