<?xml version="1.0"?>
<package format="2">
  <name>benchmarking_planners</name>
  <version>0.0.1</version>
  <description> The benchmarking_planners package</description> <!-- TODO -->

  <maintainer email="G.Sotirchos@student.tudelft.nl">George Sotirchos</maintainer>


  <license>MIT</license>


  <!-- TODO -->
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/benchmarking_planners</url> -->


  <!-- TODO -->
  <author email="Z.Ajanovic@tudelft.nl">Zlatan Ajanović</author>
  <author email="G.Sotirchos@student.tudelft.nl">George Sotirchos</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <!-- <build_depend>smpl_test</build_depend> -->
  <!-- <build_depend>pyre</build_depend> -->
  <!-- <build_depend>smpl_test</build_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>benchmarking_utils</exec_depend>
  <exec_depend>pyre</exec_depend>
  <exec_depend>smpl_test</exec_depend>


  <export>
    <metapackage/>
  </export>
</package>
