<?xml version="1.0"?>
<package format="2">
  <name>benchmarking_planners</name>
  <version>0.0.1</version>
  <description> The benchmarking_planners package</description> <!-- TODO -->

  <maintainer email="G.Sotirchos@student.tudelft.nl">George Sotirchos</maintainer>


  <!-- TODO -->
  <license>MIT</license>


  <!-- TODO -->
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/benchmarking_planners</url> -->


  <!-- TODO -->
  <author email="Z.Ajanovic@tudelft.nl">Zlatan Ajanović</author>
  <author email="G.Sotirchos@student.tudelft.nl">George Sotirchos</author>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>benchmarking_utils</exec_depend>
  <exec_depend>pyre</exec_depend>
  <exec_depend>smpl_test</exec_depend>


  <export>
    <metapackage/>
  </export>
</package>
