<?xml version="1.0"?>
<package format="2">
  <name>benchmarking_utils</name>
  <version>0.0.1</version>
  <description>The benchmarking_utils package containing scripts for settingup and benchmarking SBPL's SMPL and Kavraki Lab's Pyre</description>

  <maintainer email="G.Sotirchos@student.tudelft.nl">George Sotirchos</maintainer>


  <!-- TODO -->
  <license>MIT</license>


  <!-- TODO -->
  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/benchmarking_utils</url> -->


  <!-- TODO -->
  <author email="Z.Ajanovic@tudelft.nl">Zlatan Ajanović</author>
  <author email="G.Sotirchos@student.tudelft.nl">George Sotirchos</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
